# buffrsign-platform

./: .env  .env.example  .gitignore  API_DOCUMENTATION.md  COMPREHENSIVE_STATUS_REPORT.md  Caddyfile  DEPLOYMENT_GUIDE.md  Dockerfile  JWT_SETUP.md  Makefile  NAMECHEAP_DNS_SETUP.md  PRODUCTION_READY.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  Procfile  README.md  SECURITY.md  STATUS_REPORT.md  SUPABASE_SETUP_SUMMARY.md  VERCEL_RAILWAY_DEPLOYMENT.md  deploy-prod.sh  deploy.sh  deploy_to_digital_ocean.sh  docker-compose.caddy.yml  docker-compose.prod.yml  docker-compose.yml  env.example  env.production  package.json  railway.json  setup-env.sh  test_contract.txt  tsconfig.json  vercel.json
apps/: __init__.py
apps/api/: .env.example  Dockerfile  README.md  __init__.py  app.py  pyproject.toml  requirements.txt  test_jwt.py  websocket_server.py
apps/api/ai_services/: __init__.py  compliance_checker.py  document_intelligence.py  template_generator.py
apps/api/ai_services/agents/: __init__.py  base_agent.py  compliance_agent.py  document_agent.py  government_agent.py  workflow_agent.py
apps/api/ai_services/workflows/: __init__.py  buffrsign_workflow.py
apps/api/middleware/: redis_middleware.py
apps/api/routers/: auth.py  compliance.py  dashboard.py  documents.py  signatures.py  templates.py
apps/api/services/: redis_service.py  task_processor.py
apps/api/utils/: jwt_utils.py
components/: ErrorBoundary.tsx  Footer.tsx  Navbar.tsx
config/: eslint.config.js
deploy/: .env.production  deploy.sh  docker-production.yml  production.sh
docs/: CI_SETUP.md  TRD.md  (+3 more)
(+181 files in other folders)
